# Chimera

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  Makefile  README.md  SECURITY.md  SPONSOR.md  dummy.env
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto_release.yml  create.yml
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/src/: build.yml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hardware_detector.cpp  native_gadget.cpp  native_io.cpp
app/src/main/java/com/chimera/zpqmxr/: MainActivity.kt
app/src/main/java/com/chimera/zpqmxr/data/: AppDatabase.kt  Payload.kt  PayloadDao.kt  PayloadRepository.kt
app/src/main/java/com/chimera/zpqmxr/ui/: MainScreen.kt  MainViewModel.kt
app/src/main/java/com/chimera/zpqmxr/ui/advanced/: AdvancedGadgetsScreen.kt  AdvancedGadgetsViewModel.kt
app/src/main/java/com/chimera/zpqmxr/ui/theme/: Color.kt  (+2 more)
app/src/main/java/com/chimera/zpqmxr/utils/: AutoRunReceiver.kt  BluetoothHidManager.kt  DuckyCompiler.kt  DuckyInterpreter.kt  HID.java  MassStorageGadgetManager.kt  NativeBridge.kt  NativeIOManager.kt  RndisGadgetManager.kt  RootUtils.kt  RuckyGadgetSetup.kt  WebServer.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_logo.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/chimera/zpqmxr/: ExampleUnitTest.kt
gradle/: libs.versions.toml
(+17 files in other folders)
